# pawapro-scout

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/skills/resolve-players/: SKILL.md
.claude/skills/scout-player/: SKILL.md
input/: players.csv
src/pawapro_scout/: __init__.py  __main__.py  cli.py  config.py  models.py  pipeline.py
src/pawapro_scout/aggregate/: batter_aggregator.py  pitcher_aggregator.py  statcast_metrics.py
src/pawapro_scout/assess/batter/: basic.py  blue_special.py  gold_special.py  rank_abilities.py  red_special.py
src/pawapro_scout/assess/pitcher/: basic.py  blue_special.py  gold_special.py  pitch_classifier.py  rank_abilities.py  red_special.py
src/pawapro_scout/fetch/: base.py  fangraphs_leaderboard.py  fangraphs_splits.py  pybaseball_fetcher.py  savant_leaderboard.py  savant_search.py
src/pawapro_scout/output/: excel_exporter.py  formatter.py
tests/: TEST_PLAN_PHASE2.md  test_aggregate_batter.py  test_aggregate_pitcher.py  test_assess_batter.py  test_assess_pitcher.py  test_cache_store.py  test_cli.py  test_config.py  test_fetch_base.py  test_fetch_fangraphs_splits.py  test_fetch_pybaseball.py  test_fetch_savant_leaderboard.py  test_fetch_savant_search.py  test_models.py  test_statcast_metrics.py
